# InputMethodAndAndroidApp

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  ci.yml  release.yml
AndroidApp/: build.gradle  settings.gradle
AndroidApp/app/src/main/java/com/example/inputapp/: MainActivity.java
AndroidApp/app/src/main/res/layout/: activity_main.xml
AndroidApp/src/main/: AndroidManifest.xml
AndroidApp/src/main/java/com/example/: StatusManager.java
AndroidApp/src/main/java/com/example/androidapp/: MainActivity.java  UdpSender.java
AndroidApp/src/main/res/layout/: activity_main.xml
AndroidApp/src/main/res/values/: colors.xml  strings.xml  styles.xml
InputMethod/: CMakeLists.txt
InputMethod/src/: CMakeLists.txt  config.h  main.cpp  status_manager.cpp  status_manager.h  udp_receiver.cpp  udp_receiver.h  udpinput-addon.conf.in
UDPInput/: CMakeLists.txt
UDPInput/src/: CMakeLists.txt  UDPInput-addon.conf.in  UDPInput.conf  main.cpp  udpinput.conf
